nexus/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-nexus
spec:
  type: ExternalName
  externalName: ingress-nginx-controller.ingress-nginx.svc.cluster.local
