nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-cip
  labels:
    app: nexus
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
