nexus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - iot-nexus
      secretName: nexus-tls-secret
  rules:
    - host: iot-nexus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-cip
                port:
                  number: 80
